[klipper] Use full text for DBus return values

In a recent commit HistoryItem::text() became the visual representation
of the mimedata; often a truncated string.

mimeData()->text() always returns the full value.

BUG: 446441


(cherry picked from commit 2db375f6a71cb730e1e099f9ff17ef7092850d9d)