klipper/klipper.cpp
@@ -838,7 +838,7 @@ QString Klipper::getClipboardHistoryItem(int i)
     if (item) {
         do {
             if (i-- == 0) {
-                return item->text();
+                return item->mimeData()->text();
             }
             item = history()->find(item->next_uuid());
         } while (item != history()->first());
